--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,7 @@ hr {
     text-align: center;
 }
 
-button {
+button, #submit {
     width: fit-content;
     background-color: #932f6d;
     color: aliceblue;
