--- a/assets/style.css
+++ b/assets/style.css
@@ -7,13 +7,13 @@ body {
     display: flex;
 }
 
-#viewScores {
+/* #viewScores {
     width: 50%;
     text-align: left;
-}
+} */
 
 #time {
-    width: 45%;
+    width: 50%;
     text-align: right;
 }
 
